<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVLvar" Id="{a6daa5cd-1236-492b-89e2-cfcbde186203}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	// cuadro
	{attribute 'OPC.UA.DA' := '1'}
	botonStart : BOOL;

	// estanterias
	estanteria: ARRAY[1..6,1..3] OF ARRAY[1..2] OF REAL;
//		[
//		 [[1.6, 0.5], [2.7, 0.5], [3.7, 0.5]],
//		 [[1.6, 2.1], [2.7, 2.1], [3.7, 2.1]],
//		 [[1.6, 3.9], [2.7, 3.9], [3.7, 3.9]],
//		 [[1.6, 5.6], [2.7, 5.6], [3.7, 5.6]],
//		 [[1.6, 8.3], [2.7, 8.3], [3.7, 8.3]],
//		 [[1.6, 8.7], [2.7, 8.7], [3.7, 8.7]]
//		];
	baldasOcupadas : ARRAY [1..6,1..3] OF BOOL;
	
	// cintas
	{attribute 'OPC.UA.DA' := '1'}
	cinta : BOOL;
	//grua
//	{attribute 'OPC.UA.DA' := '1'}
//	targetPosition : INT;
//	{attribute 'OPC.UA.DA' := '1'}
//	moveForksLeft : BOOL;
//	{attribute 'OPC.UA.DA' := '1'}
//	moveForksRight : BOOL;
//	{attribute 'OPC.UA.DA' := '1'}
//	elevacionLigeraPlataforma : BOOL;
//	{attribute 'OPC.UA.DA' := '1'}
//	movingZ : BOOL;
//	{attribute 'OPC.UA.DA' := '1'}
//	movingX : BOOL;
//	{attribute 'OPC.UA.DA' := '1'}
//	forkLeftLimit : BOOL;
//	{attribute 'OPC.UA.DA' := '1'}
//	forkMiddleLimit : BOOL;
//	{attribute 'OPC.UA.DA' := '1'}
//	forkRightLimit : BOOL;
	
//	//sensores
//	{attribute 'OPC.UA.DA' := '1'}
//	sensorEntradaGrua : bool;


	{attribute 'OPC.UA.DA' := '1'}
	moveForksLeft : BOOL; // horquilla hacia ixquierda
	{attribute 'OPC.UA.DA' := '1'}
	moveForksRight : BOOL; // hoquilla hacia derecha
	//{attribute 'OPC.UA.DA' := '1'}
	//elevacionLigeraPlataforma : BOOL;
	{attribute 'OPC.UA.DA' := '1'}
	movingZ : REAL; // actual poscion en Z
	{attribute 'OPC.UA.DA' := '1'}
	movingX : REAL; // actual posicion en X
	{attribute 'OPC.UA.DA' := '1'}
	forkLeftLimit : BOOL; 
	{attribute 'OPC.UA.DA' := '1'}
	forkMiddleLimit : BOOL;
	{attribute 'OPC.UA.DA' := '1'}
	forkRightLimit : BOOL;
	{attribute 'OPC.UA.DA' := '1'}
	setPointX : REAL; // movimientp columnas (horizontal)
	{attribute 'OPC.UA.DA' := '1'}
	setPointZ : REAL; // movimeinto filas (vertical)
	
	//sensores
	{attribute 'OPC.UA.DA' := '1'}
	sensorEntradaGrua : bool;


END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>